A little typo fix

--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -76,7 +76,7 @@
 
     <!-- Create new -->
     <string name="create_new">Yeni yarat</string>
-    <string name="folder">Qovluqr</string>
+    <string name="folder">Qovluq</string>
     <string name="file">Fayl</string>
     <string name="create_new_folder">Yeni qovluq yarat</string>
     <string name="name_taken">Eyni adda fayl və ya qovluq artıq mövcuddur</string>
