fixing a spanish typo

--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -182,7 +182,7 @@
     <string name="share_via">Compartir con</string>
     <string name="select_all">Seleccionar todo</string>
     <string name="hide">Ocultar</string>
-    <string name="unhide">Montrar</string>
+    <string name="unhide">Mostrar</string>
     <string name="hide_folder">Ocultar carpeta</string>
     <string name="unhide_folder">Mostrar carpeta</string>
     <string name="temporarily_show_hidden">Mostrar ocultos temporalmente</string>
