--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -383,8 +383,8 @@
 
     <!-- OTG devices -->
     <string name="otg">OTG</string>
-    <string name="confirm_otg_storage_access_text">Please choose the root folder of the OTG device on the next screen, to grant access</string>
-    <string name="wrong_root_selected_otg">Wrong folder selected, please select the root folder of your OTG device</string>
+    <string name="confirm_otg_storage_access_text">Velg rotmappen til OTG-enheten på den neste skjermen for å gi tilgang</string>
+    <string name="wrong_root_selected_otg">Feil mappe valgt, velg rotmappen til OTG-enheten din</string>
 
     <!-- Dates -->
     <string name="january">Januar</string>
