--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -366,7 +366,7 @@
     <string name="scrolling">Kaydırma</string>
     <string name="file_operations">Dosya işlemleri</string>
     <string name="recycle_bin">Geri Dönüşüm Kutusu</string>
-    <string name="saving_label">Kaydediliyor</string>
+    <string name="saving_label">Kaydetme</string>
     <string name="startup">Başlangıç</string>
     <string name="text">Metin</string>
 
